fix(dialog): design feedback to top-align header content

--- a/components/dialog/index.css
+++ b/components/dialog/index.css
@@ -154,7 +154,7 @@ governing permissions and limitations under the License.
 	margin-block-end: var(--spectrum-standard-dialog-spacing-title-to-description);
 
 	/* Without this, buttons will be stretched */
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-end;
 
 	box-sizing: border-box;
